--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.1
   credentials_helper: ^1.0.4
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
