--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.12.1
   credentials_helper: ^1.0.4
   intl: ^0.15.8
+  shared_preferences: ^0.5.7
 
 dev_dependencies:
   flutter_test:
