--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   credentials_helper: ^1.0.4
   intl: ^0.15.8
   shared_preferences: ^0.5.7
+  provider: ^4.1.2
 
 dev_dependencies:
   flutter_test:
